[package]
name = "lamborghini-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
bluer = { version = "0.17", features = ["bluetoothd"] }
dbus = { version = "0.9", features = ["vendored"] }
futures = "0.3.32"
sdl2 = { version= "0.37", default-features = false, features = ["bundled", "static-link"] }
bitflags = { version = "2.11.0", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4.29"
clap = { version = "4.5.60", features = ["cargo"] }
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
serde_json = "1.0.149"
tokio-util = "0.7.18"
rkyv = "0.8.15"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
